# DataForge

./: README.md  pyproject.toml  setup.py
DataForge.egg-info/: PKG-INFO  SOURCES.txt
src/DataForge_JansonErikson/: main.py
tests/: test_main.py  test_utils.py
