[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DataForge"
version = "0.1.0"
authors = [
  { name="Jan Kirschke", email="jan-kirschke@outlook.de" },
]
description = "A package for analyzing and preprocessing DataFrames"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy", 
    "matplotlib",
    "seaborn",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/JansonErikson/DataForge"
"Bug Tracker" = "https://github.com/JansonErikson/DataForge/issues"